# 100-exercises-to-learn-rust

exercises/02_basic_calculator/05_factorial/src/: lib.rs
exercises/02_basic_calculator/06_while/src/: lib.rs
exercises/02_basic_calculator/07_for/src/: lib.rs
exercises/03_ticket_v1/01_struct/src/: lib.rs
exercises/03_ticket_v1/02_validation/src/: lib.rs
exercises/03_ticket_v1/04_visibility/src/: lib.rs
exercises/03_ticket_v1/07_setters/src/: lib.rs
exercises/03_ticket_v1/12_outro/src/: lib.rs
exercises/04_traits/10_assoc_vs_generic/src/: lib.rs
exercises/04_traits/11_clone/src/: lib.rs
exercises/04_traits/12_copy/src/: lib.rs
exercises/04_traits/13_drop/src/: lib.rs
exercises/04_traits/14_outro/src/: lib.rs
exercises/05_ticket_v2/01_enum/src/: lib.rs
exercises/05_ticket_v2/03_variants_with_data/src/: lib.rs
exercises/05_ticket_v2/04_if_let/src/: lib.rs
exercises/05_ticket_v2/06_fallibility/src/: lib.rs
exercises/05_ticket_v2/07_unwrap/src/: lib.rs
exercises/05_ticket_v2/08_error_enums/src/: lib.rs
exercises/05_ticket_v2/09_error_trait/src/: lib.rs
exercises/05_ticket_v2/12_thiserror/src/: lib.rs
exercises/05_ticket_v2/13_try_from/src/: lib.rs
exercises/05_ticket_v2/14_source/src/: lib.rs
exercises/08_futures/08_outro/: Cargo.toml
exercises/08_futures/08_outro/src/: data.rs  handlers.rs  helpers.rs  lib.rs  main.rs  server.rs  store.rs
exercises/08_futures/08_outro/tests/: check.rs
exercises/09_extra/00_intro/: Cargo.toml
helpers/ticket_fields/: Cargo.toml
helpers/ticket_fields/src/: description.rs  title.rs
(+37 files in other folders)
