[package]
name = "outro_08"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.83"
httparse = "1.9.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
ticket_fields = { path = "../../../helpers/ticket_fields" }
regex = "1.11.1"
lazy_static="1.5.0"
